edgevox-onnx/c-api/c-api.h

/** @brief Non-streaming decoding state for one utterance. */
typedef struct EdgevoxOnnxOfflineStream EdgevoxOnnxOfflineStream;
/**
 * @brief Configuration for spoken language identification.
 *
 * The current implementation uses Whisper-based models.
 *
 * Example using `edgevox-onnx-whisper-tiny`:
 *
 * @code
 * EdgevoxOnnxSpokenLanguageIdentificationConfig config;
 * memset(&config, 0, sizeof(config));
 * config.whisper.encoder = "./edgevox-onnx-whisper-tiny/tiny-encoder.int8.onnx";
 * config.whisper.decoder = "./edgevox-onnx-whisper-tiny/tiny-decoder.int8.onnx";
 * config.num_threads = 1;
 * config.provider = "cpu";
 * @endcode
 */
typedef struct EdgevoxOnnxSpokenLanguageIdentificationConfig {
  /** Whisper model configuration. */
  EdgevoxOnnxSpokenLanguageIdentificationWhisperConfig whisper;
  /** Number of inference threads. */
  int32_t num_threads;
  /** Non-zero to print debug information. */
  int32_t debug;
  /** Execution provider such as `"cpu"`. */
  const char *provider;
} EdgevoxOnnxSpokenLanguageIdentificationConfig;
/** @brief Opaque spoken-language identification handle. */
typedef struct EdgevoxOnnxSpokenLanguageIdentification
    EdgevoxOnnxSpokenLanguageIdentification;
/**
 * @brief Create a spoken-language identifier.
 *
 * @param config Spoken-language identification configuration.
 * @return A newly allocated identifier on success, or NULL on error. Free it
 *         with EdgevoxOnnxDestroySpokenLanguageIdentification().
 * @see EdgevoxOnnxDestroySpokenLanguageIdentification
 */
EDGEVOX_ONNX_API const EdgevoxOnnxSpokenLanguageIdentification *
EdgevoxOnnxCreateSpokenLanguageIdentification(
    const EdgevoxOnnxSpokenLanguageIdentificationConfig *config);
/**
 * @brief Destroy a spoken-language identifier.
 *
 * @param slid A pointer returned by
 * EdgevoxOnnxCreateSpokenLanguageIdentification().
 * @see EdgevoxOnnxCreateSpokenLanguageIdentification
 */
EDGEVOX_ONNX_API void EdgevoxOnnxDestroySpokenLanguageIdentification(
    const EdgevoxOnnxSpokenLanguageIdentification *slid);
/**
 * @brief Create an offline stream for spoken-language identification.
 *
 * Feed audio to the returned stream with EdgevoxOnnxAcceptWaveformOffline(), and
 * then call EdgevoxOnnxSpokenLanguageIdentificationCompute().
 *
 * @param slid A pointer returned by
 * EdgevoxOnnxCreateSpokenLanguageIdentification().
 * @return A newly allocated offline stream. Free it with
 *         EdgevoxOnnxDestroyOfflineStream().
 */
EDGEVOX_ONNX_API EdgevoxOnnxOfflineStream *
EdgevoxOnnxSpokenLanguageIdentificationCreateOfflineStream(
    const EdgevoxOnnxSpokenLanguageIdentification *slid);
/**
 * @brief Result of spoken-language identification.
 *
 * Free this object with EdgevoxOnnxDestroySpokenLanguageIdentificationResult().
 */
typedef struct EdgevoxOnnxSpokenLanguageIdentificationResult {
  /**
   * Predicted language code such as `"en"`, `"de"`, `"zh"`, or `"es"`.
   */
  const char *lang;
} EdgevoxOnnxSpokenLanguageIdentificationResult;
/**
 * @brief Run spoken-language identification on an offline stream.
 *
 * Example:
 *
 * @code
 * EdgevoxOnnxOfflineStream *stream =
 *     EdgevoxOnnxSpokenLanguageIdentificationCreateOfflineStream(slid);
 * EdgevoxOnnxAcceptWaveformOffline(stream, wave->sample_rate, wave->samples,
 *                                 wave->num_samples);
 * const EdgevoxOnnxSpokenLanguageIdentificationResult *result =
 *     EdgevoxOnnxSpokenLanguageIdentificationCompute(slid, stream);
 * printf("lang=%s\n", result->lang);
 * EdgevoxOnnxDestroySpokenLanguageIdentificationResult(result);
 * EdgevoxOnnxDestroyOfflineStream(stream);
 * @endcode
 *
 * @param slid A pointer returned by
 * EdgevoxOnnxCreateSpokenLanguageIdentification().
 * @param s A pointer returned by
 *          EdgevoxOnnxSpokenLanguageIdentificationCreateOfflineStream().
 * @return A newly allocated result object. Free it with
 *         EdgevoxOnnxDestroySpokenLanguageIdentificationResult().
 */
EDGEVOX_ONNX_API const EdgevoxOnnxSpokenLanguageIdentificationResult *
EdgevoxOnnxSpokenLanguageIdentificationCompute(
    const EdgevoxOnnxSpokenLanguageIdentification *slid,
    const EdgevoxOnnxOfflineStream *s);
/**
 * @brief Destroy a spoken-language identification result.
 *
 * @param r A pointer returned by
 * EdgevoxOnnxSpokenLanguageIdentificationCompute().
 */
EDGEVOX_ONNX_API void EdgevoxOnnxDestroySpokenLanguageIdentificationResult(
    const EdgevoxOnnxSpokenLanguageIdentificationResult *r);