edgevox-onnx/c-api/cxx-api.h

// ============================================================================
// Spoken Language Identification
// ============================================================================

/** @brief Whisper model configuration for spoken language identification. */
struct SpokenLanguageIdentificationWhisperConfig {
  /** Whisper encoder model. */
  std::string encoder;
  /** Whisper decoder model. */
  std::string decoder;
  /** Optional tail padding in samples. */
  int32_t tail_paddings = 0;
};
/** @brief Configuration for spoken language identification. */
struct SpokenLanguageIdentificationConfig {
  /** Whisper model configuration. */
  SpokenLanguageIdentificationWhisperConfig whisper;
  /** Number of inference threads. */
  int32_t num_threads = 1;
  /** Enable verbose debug logging. */
  bool debug = false;
  /** Execution provider such as `"cpu"`. */
  std::string provider = "cpu";
};
/** @brief Result of spoken language identification. */
struct SpokenLanguageIdentificationResult {
  /** Predicted language code such as `"en"`, `"de"`, `"zh"`, or `"es"`. */
  std::string lang;
};